# bspc

./: .gitignore  Cargo.toml  README.md  architecture.md  quickstart.md
bspc/: Cargo.toml
bspc-core/: Cargo.toml
bspc-core/src/: bloom_filter.rs  error.rs  format.rs  lib.rs  traits.rs
bspc-core/src/format/: constants.rs  header.rs  metadata.rs  mod.rs
bspc-core/src/traits/: backend.rs  element.rs  matrix.rs  mod.rs
bspc-core/src/validation/: bounds.rs  format.rs  mod.rs  parsing.rs
bspc/examples/: http_cli.rs  metadata_example.rs  read_matrix.rs  simple_write_benchmark.rs  streaming_access.rs  test_large_dataset.rs  write_matrix.rs
bspc/src/: chunk_bloom_filter.rs  chunked_backend.rs  http_backend.rs  lib.rs  metadata.rs  mmap_backend.rs
bspc/src/mmap_backend/: file_io.rs  matrix_operations.rs  mmap_core.rs
