[workspace]
members = ["bspc-core", "bspc"]
resolver = "2"

[workspace.dependencies]
binsparse-rs = { path = "../binsparse-rs" }
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
bytemuck = { version = "1.0", default-features = false }
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
hashbrown = { version = "0.14", default-features = false }
