[package]
description = "Binary sparse matrix format with memory mapping and I/O support"
edition = "2021"
license = "MIT"
name = "bspc"
version = "0.1.0"

[features]
default = ["serde", "mmap", "http", "async"]
async = ["dep:tokio"]
http = ["dep:reqwest", "dep:tokio", "dep:clap"]
mmap = ["dep:memmap2"]
serde = ["dep:serde", "dep:serde_json", "bspc-core/serde"]

[dependencies]
binsparse-rs = {workspace = true}
bspc-core = {path = "../bspc-core", features = ["alloc"]}
bytemuck = {workspace = true}
clap = {version = "4.0", features = ["derive"], optional = true}
hashbrown = {workspace = true}
memmap2 = {workspace = true, optional = true}
rayon = "1.7"
reqwest = {version = "0.11", features = ["stream"], optional = true}
serde = {workspace = true, optional = true}
serde_json = {workspace = true, optional = true}
tokio = {version = "1.0", features = ["full", "fs"], optional = true}

[dev-dependencies]
criterion = {workspace = true}
rand = {workspace = true}
